--- a/index.html
+++ b/index.html
@@ -146,8 +146,12 @@
   <!-- Footer -->
   <footer>
     <div class="social-icons mb-2">
-      <a href="https://www.fiverr.com/" target="_blank"><i class="bi bi-briefcase"></i></a>
-      <a href="https://www.linkedin.com/" target="_blank"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.fiverr.com/usman_ahmeddev" target="_blank" title="Visit my Fiverr">
+    <i class="bi bi-briefcase"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/usman-ahmed-275003371/" target="_blank" title="Connect on LinkedIn">
+    <i class="bi bi-linkedin"></i>
+  </a>
     </div>
     <p class="mb-0">© 2025 Ahmed Usman Danianu | All Rights Reserved</p>
   </footer>
@@ -237,3 +241,4 @@
 
 </body>
 </html>
+
