--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Open Graph meta tags for LinkedIn/Facebook preview -->
+<meta property="og:title" content="Ahmed Usman Danianu | Web Developer Portfolio">
+<meta property="og:description" content="Modern, responsive web design and development projects by Usman Ahmed.">
+<meta property="og:image" content="https://usman-ahmed-portfolio.netlify.app/images/12.png">
+<meta property="og:url" content="https://usman-ahmed-portfolio.netlify.app/">
+<meta property="og:type" content="website">
+
   <title>Ahmed Usman Danianu | Web Developer</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -241,4 +248,5 @@
 
 </body>
 </html>
+
 
